# strictdoc

./: .coveragerc  .coveragerc.combined  .coveragerc.end2end  .coveragerc.integration  .coveragerc.unit  .coveragerc.unit_server  .envrc  .gitattributes  .gitignore  .link_health.yml  .pylint.ini  .python-version  .readthedocs.yaml  1.tt  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  all_day.csv  check_environment.py  doc.sdoc  entrypoint.sh  mypy.ini  pyproject.toml  requirements.bootstrap.txt  requirements.check.txt  requirements.development.txt  requirements.txt  ruff.toml  setup.py  strictdoc.rst  strictdoc.strictdoc  strictdoc.toml  strictdoc_config.py  tasks.py  tasks_wine.py  test.sdoc  (+1 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general.md
.github/__workflows/: ci-windows-powershell.yml  ci-windows.yml  codeql-analysis.yml  end2end-tests.yml  release.yml
.github/workflows/: check-dead-links.yml  ci-linux-end2end-tests.yml  ci-linux-ubuntu-16.yml  ci-linux-ubuntu-latest.yml  ci-linux.yml  ci-mac.yml  ci-macos-end2end-tests.yml  ci-windows-powershell.yml  ci-windows.yml  codeql-analysis.yml  dead_links.yml  docker.yml  end2end-tests.yml  periodic-check-dead-links.yml  periodic-integration-test-linux.yml  periodic-integration-test-macos.yml  periodic-integration-test.yml  periodic-release-test.yml  release.yml  screencast-tests.yml
Formula/: README.md  strictdoc.rb
developer/: pip_install_strictdoc_deps.py
developer/design/: 2022-05-strictdoc.afdesign
developer/drawio/: Architecture.drawio  Backlog.drawio  Roadmap.drawio  StrictDoc_Traceability.drawio  Workspace.drawio
developer/fixit/: check_comments.py  check_docstrings.py
developer/git/: commit_validator.py
developer/pyinstaller_hooks/: hook-html2pdf4doc.py  hook-html2print.py  hook-latexcodec.py  hook-six.py  hook-spdx_tools.py  hook-yaml.py
developer/sandbox/: Document_0.sdoc  Document_1.sdoc  Document_2.sdoc  document1.sdoc  hello_world.c  hello_world.cpp  hello_world.py  sandbox.sdoc  strictdoc.toml
developer/snap/: README.md
developer/tasks/: task.template.md
docs/: 01-introduction.sdoc  01-strictdoc-requirements.sdoc  02-saturn-getting-started.sdoc  02-strictdoc-getting-started.sdoc  03-saturn-requirements.sdoc  03-strictdoc-requirements.sdoc  03-strictdoc-roadmap.sdoc  05-saturn-roadmap.sdoc  05-strictdoc-roadmap.sdoc  plan.sdoc  plan_draft.__sdoc  reqif.sdoc  sandbox.sdoc  sdoc_project_statistics.py  strictdoc-1-user-guide.sdoc  strictdoc-1-user-manual.sdoc  strictdoc-2-development-plan.sdoc  strictdoc-2-requirements.sdoc  strictdoc-3-backlog.sdoc  strictdoc-3-development-plan.sdoc  strictdoc-3-requirements.sdoc  strictdoc-4-backlog.sdoc  strictdoc-4-design.sdoc  strictdoc-5-backlog.sdoc  strictdoc-6-contributing.sdoc  strictdoc-7-faq.sdoc  strictdoc-roadmap.sdoc  strictdoc.sdoc  strictdoc.toml  strictdoc_01_user_guide.sdoc  strictdoc_02_faq.sdoc  strictdoc_02_feature_map.sdoc  strictdoc_03_development_plan.sdoc  strictdoc_03_faq.sdoc  strictdoc_04_backlog.sdoc  strictdoc_04_changelog.sdoc  strictdoc_04_release_notes.sdoc  strictdoc_04_troubleshooting.sdoc  strictdoc_05_troubleshooting.sdoc  strictdoc_10_contributing.sdoc  (+15 more)
docs/_assets/: StrictDoc_Roadmap.drawio
docs/sphinx/: requirements.txt
docs_extra/: DO178_requirements.sdoc  Zephyr_requirements.sdoc
drafts/: DO-178C.sdoc  rst_examples.sdoc  strictdoc_low_level_requirements.sdoc
drafts/requirements/: strictdoc.toml
examples/: example_02.sdoc  example_03.sdoc  example_05.sdoc  example_06.sdoc  example_07.sdoc  example_08.sdoc
examples/example_source_files/: file2.py
saturn/cli/: main.py
saturn/core/: document_finder.py  document_iterator.py  document_tree_iterator.py  level_counter.py  traceability_index.py
saturn/gui/: main.py  main_widget.py  main_window.py  styles.py
snap/: README.md  snapcraft.yaml
spec/: Formatting.md  Markdown.gra.md  Markdown.md
stpa/: hazards.sdoc  loss.sdoc  stakeholders.sdoc
strictdoc/: __init__.py  launcher.py
strictdoc/api/: __init__.py
strictdoc/backend/: meta.py  rst.py  rst_document.py  rst_parser.py  rst_reader.py  rst_to_html_writer.py  rst_writer.py
strictdoc/backend/sdoc/tree_sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tasks.py  tree-sitter.json
strictdoc/backend/sdoc/tree_sitter/bindings/c/: tree-sitter-strictdoc.pc.in
strictdoc/backend/sdoc/tree_sitter/bindings/c/tree_sitter/: tree-sitter-strictdoc.h
strictdoc/backend/sdoc/tree_sitter/bindings/go/: binding.go  binding_test.go
strictdoc/backend/sdoc/tree_sitter/bindings/node/: binding.cc  index.js
strictdoc/backend/sdoc/tree_sitter/bindings/python/tests/: test_binding.py  test_document.py  test_node.py
strictdoc/backend/sdoc/tree_sitter/bindings/python/tree_sitter_strictdoc/: __init__.py  binding.c  helpers.py  parser.py
strictdoc/backend/sdoc/tree_sitter/bindings/rust/: build.rs  lib.rs
strictdoc/backend/sdoc/tree_sitter/bindings/swift/TreeSitterStrictDocTests/: TreeSitterStrictDocTests.swift
strictdoc/backend/sdoc/tree_sitter/src/: grammar.json  node-types.json  parser.c
strictdoc/cli/: argument_int_range.py  base_command.py  cli_arg_parser.py  command_parser_builder.py  main.py
strictdoc/commands/: _shared.py  about_command.py  convert.py  convert_config.py  diff_command.py  dump_grammar_command.py  export.py  export_config.py  format_command.py  server.py  (+15 more)
tests/integration/features/document_fragments/60_relations_between_nodes_in_included_documents/: pyproject.toml  strictdoc.toml  strictdoc_config.py  test.itest
tests/integration/features/document_fragments/60_relations_between_nodes_in_included_documents/00_sys/: _index.sdoc  _sys_grammar.sgra  dummy.sdoc
tests/integration/features/document_fragments/60_relations_between_nodes_in_included_documents/01_srs/: _index.sdoc  _srs_grammar.sgra  dummy.sdoc
tools/: confluence_html_table_import.py  html2pdf4doc_fuzzer.py  link_health.py  server_check.py  strictdoc_tk_launcher.py
(+6007 files in other folders)
