[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "strictdoc/__init__.py"

#[tool.hatch.build.targets.sdist]
#include = [
#    "/uvicorn",
#]

[project]
name = "strictdoc"
dynamic = ["version"]
description = "StrictDoc is open-source software for technical documentation and requirements management."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "Stanislav Pankevich", email = "s.pankevich@gmail.com" },
    { name = "Maryna Balioura", email = "mettta@gmail.com" },
]
classifiers = [
    # "Development Status :: 4 - Beta",
    # "Environment :: Web Environment",
    # "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    # "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "textx >= 3.0.0, == 3.*",
    "jinja2 >= 2.11.2",

    # Reading project config from strictdoc.toml file.
    "toml",

    # Parsing and rendering RST.
    "docutils >= 0.16, == 0.*",

    # Requirements-to-source traceability. Colored syntax for source files.
    "pygments >= 2.10.0, == 2.*",

    # TODO: Only used by reqif. Remove.
    "lxml >= 4.6.2, == 4.*",

    # Static HTML export with embedded assets.
    "beautifulsoup4 >= 4.12.0, == 4.*",
    "python-datauri >= 0.2.9, == 0.*",

    # Excel
    "XlsxWriter >= 1.3.7, == 1.*",
    "xlrd >= 2.0.1, == 2.*",

    # ReqIF
    "reqif >= 0.0.33, == 0.*",

    # Bibtex
    "pybtex >= 0.23.0, == 0.*",

    # Web server dependencies
    "fastapi >= 0.83.0",
    # FastAPI: To receive uploaded files and/or form data, first install python-multipart.
    "python-multipart",
    "uvicorn[standard] >= 0.14.0",
    "WebSockets",
]

[project.optional-dependencies]
development = [
    # Development tasks
    "invoke>=1.4.1",
    # Reload files when changed
    "watchdog>=2.1.7",

    # Packaging
    "build",
    "twine",

    # Linters and static analysis
    "black>=21.9b0",
    "mypy>=0.910",
    "pylint>=2.11.1",
    "flake8>=3.9.2",
    "ruff",

    # Tests
    "pytest>=6.2.2",
    "pyfakefs>=4.5.5",
    "coverage>=5.4",
    "lit>=0.11.0.post1",
    "filecheck>=0.0.20",
    # Tests: Validating content
    "html5lib>=1.1",
    "pytidylib>=0.3.2",
    "openpyxl>=3.0.5",

    # Documentation
    "sphinx>=3.2.1",
    "guzzle_sphinx_theme~=0.7.11",

    # Used by the dead links checker
    "requests>=2.27.1",

    # Server-related
    "seleniumbase",
    # httpx is needed for running server-related unit tests.
    "httpx",
    # psutil is needed to reap Uvicorn's zombie processes when running end2end
    # tests. One day someone finds a better solution.
    "psutil",
]
nuitka = [
    # Nuitka:WARNING: Using very slow fallback for ordered sets, please install
    # 'ordered-set' PyPI package for best Python compile time performance.
    "nuitka",
    "ordered-set",
]

[project.scripts]
strictdoc = "strictdoc.cli.main:main"

[project.urls]
Changelog = "https://github.com/strictdoc-project/strictdoc/blob/main/CHANGELOG.md"
# Funding = "https://..."
Homepage = "https://strictdoc.readthedocs.io/en/stable/"
Source = "https://github.com/strictdoc-project/strictdoc"
