[package]
name = "tree-sitter-strictdoc"
description = "TBD"
version = "0.1.0"
authors = ["Stanislav Pankevich, Maryna Balioura <s.pankevich@gmail.com, mettta@gmail.com>"]
license = "Apache 2"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "strictdoc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://strictdoc.readthedocs.io/en/stable/"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
