[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-strictdoc"
description = "TBD"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "strictdoc"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "Stanislav Pankevich", email = "s.pankevich@gmail.com" },
  { name = "Maryna Balioura", email = "mettta@gmail.com" }
]
requires-python = ">=3.9"
license.text = "Apache 2"
readme = "README.md"

dependencies = [
  "tree-sitter==0.24.0",
  # "tree-sitter-python==0.23"
]

[project.urls]
Homepage = "https://strictdoc.readthedocs.io/en/stable/"
Funding = "https://strictdoc.readthedocs.io/en/stable/"

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
